@@ -17,6 +17,7 @@ import mcjty.lib.varia.DimensionId;
 import mcjty.rftoolsbuilder.modules.builder.BuilderConfiguration;
 import mcjty.rftoolsbuilder.modules.builder.items.ShapeCardItem;
 import mcjty.rftoolsbuilder.modules.builder.items.ShapeCardType;
+import mcjty.rftoolsbuilder.modules.builder.network.PacketOpenBuilderGui;
 import mcjty.rftoolsbuilder.modules.builder.network.PacketUpdateNBTItemInventoryShape;
 import mcjty.rftoolsbuilder.modules.builder.network.PacketUpdateNBTShapeCard;
 import mcjty.rftoolsbuilder.modules.scanner.ScannerConfiguration;
@@ -32,7 +33,6 @@ import net.minecraft.client.gui.screen.Screen;
 import net.minecraft.client.renderer.BufferBuilder;
 import net.minecraft.client.renderer.Tessellator;
 import net.minecraft.client.renderer.vertex.DefaultVertexFormats;
-import net.minecraft.inventory.IInventory;
 import net.minecraft.item.ItemStack;
 import net.minecraft.nbt.CompoundNBT;
 import net.minecraft.tileentity.TileEntity;
@@ -42,6 +42,7 @@ import net.minecraft.util.math.BlockPos;
 import net.minecraft.util.text.ITextProperties;
 import net.minecraft.util.text.LanguageMap;
 import net.minecraft.util.text.StringTextComponent;
+import net.minecraftforge.items.CapabilityItemHandler;
 import org.lwjgl.opengl.GL11;
 
 import java.util.List;
@@ -92,7 +93,6 @@ public class GuiShapeCard extends Screen implements IShapeParentGui, IKeyReceive
     // For GuiComposer, GuiBuilder, etc.: the current card to edit
     public static BlockPos fromTEPos = null;
     public static int fromTEStackSlot = 0;
-    public static Screen returnGui = null;
 
     private ShapeID shapeID = null;
     private ShapeRenderer shapeRenderer = null;
@@ -101,6 +101,14 @@ public class GuiShapeCard extends Screen implements IShapeParentGui, IKeyReceive
     public GuiShapeCard(boolean fromTE) {
         super(new StringTextComponent("Shapecard"));
         this.fromTE = fromTE;
+    }
+
+    @Override
+    public void onClose() {
+        super.onClose();
+        if (fromTE) {
+            RFToolsBuilderMessages.INSTANCE.sendToServer(new PacketOpenBuilderGui(fromTEPos));
+        }
     }
 
     private ShapeRenderer getShapeRenderer() {
@@ -130,11 +138,7 @@ public class GuiShapeCard extends Screen implements IShapeParentGui, IKeyReceive
     private ItemStack getStackToEdit() {
         if (fromTE) {
             TileEntity te = minecraft.world.getTileEntity(fromTEPos);
-            if (te instanceof IInventory) {
-                return ((IInventory) te).getStackInSlot(fromTEStackSlot);
-            } else {
-                return ItemStack.EMPTY;
-            }
+            return te.getCapability(CapabilityItemHandler.ITEM_HANDLER_CAPABILITY).map(h -> h.getStackInSlot(fromTEStackSlot)).orElse(ItemStack.EMPTY);
         } else {
             return minecraft.player.getHeldItem(Hand.MAIN_HAND);
         }
@@ -572,8 +576,8 @@ public class GuiShapeCard extends Screen implements IShapeParentGui, IKeyReceive
         GlStateManager.disableBlend();
     }
 
-    public static void open() {
-        Minecraft.getInstance().displayGuiScreen(new GuiShapeCard(false));
+    public static void open(boolean fromTE) {
+        Minecraft.getInstance().displayGuiScreen(new GuiShapeCard(fromTE));
     }
 
 }
